# capo

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SETUP_PROJECT.md  TASKS.md  WORKING.md  project.md
.claude/workflows/: dashboard-design-iteration.js
.cursor/commands/: next.md
.github/workflows/: ci.yml
.opencode/commands/: next.md
crates/capo-adapters/: Cargo.toml
crates/capo-adapters/fixtures/: acp-replay.jsonl  claude-code-stream.jsonl  claude-code-tool-result.jsonl  codex-exec-workspace-write-file-change.jsonl  codex-exec-workspace-write.jsonl  codex-exec.jsonl
crates/capo-adapters/src/: acp_client.rs  acp_live.rs  acp_replay.rs  acp_wire.rs  adapter.rs  claude_live.rs  codex_live.rs  event.rs  lib.rs  local_subscription.rs  permission_request.rs  provider_parsers.rs  scripted_mock_agent.rs  tests.rs
crates/capo-cli/: Cargo.toml
crates/capo-cli/src/: adapter_dispatch.rs  adapter_dispatch_prepare.rs  adapter_dispatch_run.rs  adapter_dogfood.rs  adapter_launch.rs  adapter_replay.rs  adapter_smoke.rs  agent_session.rs  cli_surface.rs  connectivity.rs  connectivity_evidence.rs  dashboard.rs  dogfood.rs  evidence.rs  main.rs  operator_control.rs  permission.rs  project_memory.rs  project_memory_flow.rs  role_config.rs  runtime_target.rs  runtime_target_evidence.rs  server_client.rs  tests.rs  tool_wrapper.rs  voice.rs  voice_render.rs  workpad.rs
crates/capo-cli/src/operator_control/: planner.rs  render.rs  server_process.rs
crates/capo-cli/src/server_client/: dispatch.rs
crates/capo-cli/tests/: server_transport.rs
crates/capo-cli/tests/server_transport/: basic.rs  dispatch.rs  dt5_exposure.rs  dt7.rs  dt8.rs  live.rs  replay.rs  role_topology.rs  stream.rs  support.rs
crates/capo-controller/: Cargo.toml
crates/capo-controller/src/: acp_live_dispatch.rs  acp_replay_ingest.rs  adapter_replay.rs  checkpoint.rs  completion_auditor.rs  continuation_context.rs  continuation_scheduler.rs  dp10_consolidated.rs  dp11_live_smoke.rs  fake_session.rs  goal_autonomy_e2e.rs  grant_lifecycle.rs  lib.rs  local_dispatch.rs  memory_index_ingest.rs  parent_child.rs  permission_round_trip.rs  real_controller.rs  reattach.rs  resource_ceiling.rs  score_run.rs  session_control.rs  tests.rs  tool_dispatch.rs  turn_loop.rs  verification.rs  workspace_lock.rs  worktree_isolation.rs
crates/capo-core/: Cargo.toml
crates/capo-eval/: Cargo.toml
crates/capo-memory/: Cargo.toml
crates/capo-query/: Cargo.toml
crates/capo-runtime/: Cargo.toml
crates/capo-runtime/src/: anti_sleep.rs  async_runner.rs  connectivity_health.rs  keep_alive.rs  lib.rs  remote_attach.rs  runner_spool.rs  sandbox.rs  worktree.rs
crates/capo-server/: Cargo.toml
crates/capo-server/contract/: README.md  capo-wire.d.ts  jsonrpc-schema.json
crates/capo-server/contract/snapshots/: notification-cancel.json  notification-event-tail.json  notification-interrupt.json  request-list-agents.json  request-read-thread.json  request-subscribe.json  response-agents.json  response-error-cancelled.json  response-error-subscribe-ahead-of-log.json  response-subscribed.json  sse-event-sequence.txt  sse-event-tail.json
crates/capo-server/src/: acp_mcp_http.rs  controller_routing.rs  dashboard.rs  dispatch.rs  event_tail.rs  goal_commands.rs  lib.rs  live_provider.rs  safety_floor.rs  server_core.rs  tests.rs  transport.rs  turn_orchestration.rs  types.rs  util.rs
crates/capo-server/src/tests/: cancel_registry.rs  claude_chat.rs  claude_loop_route.rs  codex_chat.rs  codex_workspace_write.rs  contract.rs  controller_routing.rs  crash_recovery.rs  dispatch.rs  dt3.rs  dt4a.rs  dt4b.rs  dt5.rs  dt6.rs  e2e_gate.rs  event_tail.rs  foundation.rs  goal.rs  live_provider.rs  live_smoke.rs  multi_turn_edit.rs  per_turn_artifacts.rs  remote_crash_safety.rs  remote_live_smoke.rs  remote_materialization.rs  remote_recovery.rs  replay.rs  safety_floor.rs  sessions.rs  stream.rs  transport.rs  turn_orchestration.rs
crates/capo-server/src/transport/: codec.rs  contract.rs  jsonrpc.rs  wire.rs
crates/capo-server/tests/: acp_dispatch_smoke.rs  acp_live_bridge_smoke.rs  acp_mcp_http_smoke.rs  cancel_live_e2e.rs  conductor_legibility_live_e2e.rs  conductor_live_e2e.rs  conductor_turn_smoke.rs  locked_conductor_smoke.rs  steer_live_e2e.rs
crates/capo-state/: Cargo.toml
crates/capo-state/src/: apply.rs  broadcast.rs  codec.rs  codec_adapter.rs  codec_encode.rs  connectivity_redaction.rs  error.rs  event.rs  goal_report.rs  lib.rs  projections.rs  queries.rs  schema.rs  tests.rs  thread.rs
crates/capo-tmptest/: Cargo.toml
crates/capo-tools/: Cargo.toml
crates/capo-tools/src/: agent_reports.rs  apply_patch.rs  fakes.rs  lib.rs  lint.rs  permission.rs  runtime_wrapper_paths.rs  runtime_wrapper_types.rs  runtime_wrappers.rs  search.rs  test_run.rs  tests.rs
crates/capo-voice/: Cargo.toml
crates/capo-web/: Cargo.toml  README.md
crates/capo-web/src/: main.rs
crates/capo-web/static/: chat.html
crates/capo-web/tests/snapshots/: sse-event-tail.json
crates/capo-workpads/: Cargo.toml
docs/capo-refocus/: A2-B2-B1-COOPERATIVE-CANCEL.md  AUTONOMOUS-PLAN.md  CONTROL-PLANE-RESEARCH.md  CUT-PLAN.md  EXECUTION-SUMMARY.md  EXPERIMENT-tool-channel.md  FE-COORDINATION-ROADMAP.md  KNOWN-ISSUES.md  LIVE-STEERING-DESIGN.md  NIGHT_LOG.md  PLAN.md  REFOCUS-SUMMARY.md  REVIEW-WHEN-BACK.md  VALIDATION.md  WORKER-RESULT-CHANNEL.md  control-plane-fork-vs-spec.html  dogfood-conductor-chat.md  wf2-phase-a-console.mjs  wf3-turn-registry.mjs
web/app/: README.md  index.html  package.json  vite.config.ts
web/dashboard/: README.md  app.js  index.html  styles.css
workpads/: README.md  WORKPADS.md
workpads/architecture/: acp-replay-dedupe.md  boundaries.md  capability-permissions.md  gate-review.md  knowledge.md  memory-architecture.md  protocol-provider.md  prototype-plan.md  references.md  runtime-tunnel.md  state-model.md  tasks.md  tool-exposure.md
workpads/architecture-improvements/: knowledge.md  tasks.md
workpads/claude-subscription/: knowledge.md  references.md  tasks.md
workpads/connectivity-tunnel/: tasks.md  (+2 more)
(+149 files in other folders)
