[workspace]
members = [
    "crates/capo-adapters",
    "crates/capo-cli",
    "crates/capo-controller",
    "crates/capo-core",
    "crates/capo-eval",
    "crates/capo-memory",
    "crates/capo-query",
    "crates/capo-runtime",
    "crates/capo-state",
    "crates/capo-tools",
    "crates/capo-voice",
    "crates/capo-workpads",
]
resolver = "3"

[workspace.package]
edition = "2024"
repository = "https://github.com/omx/capo"
rust-version = "1.94"
version = "0.1.0"

[workspace.dependencies]
capo-adapters = { path = "crates/capo-adapters" }
capo-controller = { path = "crates/capo-controller" }
capo-core = { path = "crates/capo-core" }
capo-eval = { path = "crates/capo-eval" }
capo-memory = { path = "crates/capo-memory" }
capo-query = { path = "crates/capo-query" }
capo-runtime = { path = "crates/capo-runtime" }
capo-state = { path = "crates/capo-state" }
capo-tools = { path = "crates/capo-tools" }
capo-voice = { path = "crates/capo-voice" }
capo-workpads = { path = "crates/capo-workpads" }
