[package]
name = "capo-adapters"
description = "Agent adapter scaffolding for Capo."
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
capo-core.workspace = true
capo-runtime.workspace = true
capo-tools.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
capo-tmptest.workspace = true
