[package]
name = "capo-cli"
description = "Command-line control surface for Capo."
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "capo"
path = "src/main.rs"

[dependencies]
capo-adapters.workspace = true
capo-controller.workspace = true
capo-core.workspace = true
capo-eval.workspace = true
capo-memory.workspace = true
capo-runtime.workspace = true
capo-state.workspace = true
capo-tools.workspace = true
