[package]
name = "capo-controller"
description = "Controller orchestration scaffold for Capo."
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
capo-adapters.workspace = true
capo-core.workspace = true
capo-memory.workspace = true
capo-runtime.workspace = true
capo-state.workspace = true
capo-tools.workspace = true
serde_json = "1.0.150"
# SG6: the VerificationRunner drives the streaming runtime runner
# (`AsyncLocalProcessRunner`) so a successful over-cap run is truncated, not
# failed. A small current-thread runtime hosts that async call from the
# otherwise-synchronous controller API.
tokio = { workspace = true, features = ["rt", "macros", "time", "io-util"] }

[dev-dependencies]
serde_json = "1.0.150"
