[package]
name = "capo-controller"
description = "Controller orchestration scaffold for Capo."
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
capo-adapters.workspace = true
capo-core.workspace = true
capo-memory.workspace = true
capo-runtime.workspace = true
capo-state.workspace = true
capo-tools.workspace = true
serde_json = "1.0.150"
# SG6 note: the VerificationRunner drives the streaming runtime runner
# (`AsyncLocalProcessRunner`), but the tokio runtime and the spawn -> drain ->
# wait bridging are owned BEHIND the `capo-runtime` seam
# (`AsyncLocalProcessRunner::run_to_completion`). The controller calls that one
# synchronous method, so it needs no direct tokio dependency of its own.

[dev-dependencies]
serde_json = "1.0.150"
