[package]
name = "capo-runtime"
description = "Runtime runner scaffolding for Capo."
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
capo-core.workspace = true
capo-state.workspace = true
tokio = { workspace = true, features = [
    "rt",
    "process",
    "io-util",
    "macros",
    "time",
    "sync",
] }
sha2 = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
capo-tmptest.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time", "io-util"] }
