[package]
name = "capo-server"
description = "Server/control-plane boundary for Capo."
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
capo-adapters.workspace = true
capo-controller.workspace = true
capo-core.workspace = true
capo-query.workspace = true
capo-runtime.workspace = true
capo-state.workspace = true
serde_json = "1.0.150"
