[package]
name = "capo-state"
description = "State store and projection scaffolding for Capo."
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
capo-core.workspace = true
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde_json = "1.0.150"

[dev-dependencies]
capo-tmptest.workspace = true
