[package]
name = "capo-tools"
description = "Tool exposure and instrumentation scaffolding for Capo."
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
capo-core.workspace = true
capo-runtime.workspace = true
serde_json = "1.0.150"
similar = { version = "3.1.1", default-features = false, features = ["text"] }
